Fixed responsiveness on mobile device

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -101,3 +101,28 @@ h3 {
     margin: 0; 
   }
 }
+
+@media (max-width: 1023px) {
+  .about {
+    padding: 5rem 2rem;
+  }
+
+  img {
+    width: 30%;
+    height: auto;
+  }
+}
+
+@media (max-width: 344px) {
+  .about {
+    padding: 5rem 1rem;
+  }
+
+  .text {
+    max-width: 95%;
+  }
+
+  .tech-stack {
+    width: 100px;
+  }
+}
